# UserManagement

./: CMakeLists.txt  Management.cpp  Management.h  boss.cpp  boss.h  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  test.cpp  worker.cpp  worker.h  workersDB.txt
